EEVEE Next: render region enforced in camera view, even when disabled #114404

Closed
opened 2023-11-02 13:16:33 +01:00 by Zsolt Stefan · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Super/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.93

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-30 23:45, hash: 67b078aa6f4c
Worked: EEVEE legacy

Short description of error
When render region was used once, then it stays in camera view, even after being disabled.

Exact steps for others to reproduce the error

  • Go to camera view.
  • Press CTRL-B and draw a region.
  • Go to Properties --> Output properties and disable render region
    --> EEVEE Next still limits the render region.

A basic file is attached.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Super/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.93 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-30 23:45, hash: `67b078aa6f4c` Worked: EEVEE legacy **Short description of error** When render region was used once, then it stays in camera view, even after being disabled. **Exact steps for others to reproduce the error** - Go to camera view. - Press CTRL-B and draw a region. - Go to Properties --> Output properties and disable render region --> EEVEE Next still limits the render region. A basic file is attached.
Zsolt Stefan added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-02 13:16:34 +01:00
Member

Confirmed

Confirmed
Philipp Oeser added
Status
Confirmed
Module
EEVEE & Viewport
Interest
EEVEE
and removed
Status
Needs Triage
labels 2023-11-02 14:11:55 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-08 19:13:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114404
No description provided.