Fix #114404: EEVEE-Next: Render region enforced even when disabled